Fix toolbar height on mobile

--- a/Components/Home/Home.css
+++ b/Components/Home/Home.css
@@ -18,6 +18,9 @@
 		transition-duration: 300ms;
 		&.collapsed{
 			max-height: 64px;
+			@media (max-width: 599px) {
+				max-height: 56px;
+			}
 		}
 		a {
 			color: #fff;
